--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-md-6 d-flex justify-content-center">
                     <div class="home-img">
-                        <img src="c:\Users\VivoBook\OneDrive\Documents\web\image\WhatsApp Image 2025-01-04 at 09.07.17_6e1da937.jpg" alt="Profile Image">
+                        <img src="c:\Users\VivoBook\OneDrive\Documents\web\image\profil.jpg" alt="Profile Image">
                     </div>
                 </div>
             </div>
